# pybes3

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CMakeLists.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: auto-update.yml  build-wheels.yml  mkdocs-gh-deploy.yml  pre-commit.yml  python-publish.yml  run-pytest.yml  run-tests.yml
api/pybes3/: index.html
api/pybes3._cache_numba/: index.html
api/pybes3.besio/: index.html
api/pybes3.detectors/: index.html
api/pybes3.detectors.identify/: index.html
api/pybes3.tracks/: index.html
cmake/: pybes-dependencies.cmake  setup-pybes.sh
doc/: besio.md  structure.yml
docs/: get-started.md  index.md  installation.md
docs/api/: pybes3._cache_numba.md  pybes3.besio.md  pybes3.detectors.identify.md  pybes3.detectors.md  pybes3.md  pybes3.tracks.helix.md  pybes3.tracks.md
docs/user-manual/: bes3-data-reading.md  digi-identifier.md  helix.md  tracks.md
examples/: analysis.ipynb
get-started/: index.html
installation/: index.html
note/: basket_binary_data.npy  extract_binary_data.ipynb
search/: search_index.json
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cpp/RootEventData/: CMakeLists.txt
src/cpp/RootEventData/include/RootEventData/: LinkDef.h  SimMatr.h  TBossFullEvent.h  TDigiEvent.h  TDisTrack.h  TDstEvent.h  TDstHltInf.h  TEmcDigi.h  TEmcMc.h  TEmcTrack.h  TEvtHeader.h  TEvtNavigator.h  TEvtRecDTag.h  TEvtRecEtaToGG.h  TEvtRecEvent.h  TEvtRecObject.h  TEvtRecPi0.h  TEvtRecPrimaryVertex.h  TEvtRecTrack.h  TEvtRecVeeVertex.h  TExtTrack.h  THltEvent.h  THltInf.h  THltRaw.h  TJobInfo.h  TLumiDigi.h  TMcDigiEmc.h  TMcEvent.h  TMcHitEvent.h  TMcHitMdc.h  TMcHitTof.h  TMcParticle.h  TMdcDedx.h  TMdcDigi.h  TMdcKalTrack.h  TMdcMc.h  TMdcTrack.h  TMucDigi.h  TMucMc.h  TMucTrack.h  (+21 more)
src/cpp/RootEventData/src/: TBossFullEvent.cxx  TDigiEvent.cxx  TDisTrack.cxx  TDstEvent.cxx  TDstHltInf.cxx  TEmcDigi.cxx  TEmcMc.cxx  TEmcTrack.cxx  TEvtHeader.cxx  TEvtNavigator.cxx  TEvtRecDTag.cxx  TEvtRecEtaToGG.cxx  TEvtRecEvent.cxx  TEvtRecObject.cxx  TEvtRecPi0.cxx  TEvtRecPrimaryVertex.cxx  TEvtRecTrack.cxx  TEvtRecVeeVertex.cxx  TExtTrack.cxx  THltEvent.cxx  THltInf.cxx  THltRaw.cxx  TJobInfo.cxx  TLumiDigi.cxx  TMcDigiEmc.cxx  TMcEvent.cxx  TMcHitEvent.cxx  TMcHitMdc.cxx  TMcHitTof.cxx  TMcParticle.cxx  TMdcDedx.cxx  TMdcDigi.cxx  TMdcKalTrack.cxx  TMdcMc.cxx  TMdcTrack.cxx  TMucDigi.cxx  TMucMc.cxx  TMucTrack.cxx  TRawData.cxx  TRecEmcCluster.cxx  (+19 more)
src/cpp/besio/: BesEventModel.hh  BesEventReader.cc  BesEventReader.hh  BesRootFieldLeaf.hpp  CMakeLists.txt  ModuleDeclare.cc  ModuleFunctions.cc  ModuleFunctions.hh  Utils.cc  Utils.hh
src/cpp/besio/Digi/: BesRFLeafDigiEmc.hpp  BesRFLeafDigiFromMc.hpp  BesRFLeafDigiLumi.hpp  BesRFLeafDigiMdc.hpp  BesRFLeafDigiMuc.hpp  BesRFLeafDigiTof.hpp
src/cpp/besio/Dst/: BesRFLeafDstDedx.hpp  BesRFLeafDstEmc.hpp  BesRFLeafDstExt.hpp  BesRFLeafDstMdc.hpp  BesRFLeafDstMuc.hpp  BesRFLeafDstTof.hpp
src/cpp/besio/Event/: BesRFLeafEvtHeader.hpp
src/cpp/besio/EvtRec/: BesRFLeafEvtRecDTag.hpp  BesRFLeafEvtRecEtaToGG.hpp  BesRFLeafEvtRecEvent.hpp  BesRFLeafEvtRecPi0.hpp  BesRFLeafEvtRecPrimaryVertex.hpp  BesRFLeafEvtRecTracks.hpp  BesRFLeafEvtRecVeeVertex.hpp
src/cpp/besio/Hlt/: BesRFLeafHltDstInf.hpp  BesRFLeafHltInf.hpp  BesRFLeafHltRaw.hpp
src/cpp/besio/Mc/: BesRFLeafMcEmc.hpp  BesRFLeafMcMdc.hpp  BesRFLeafMcMuc.hpp  BesRFLeafMcParticle.hpp  BesRFLeafMcTof.hpp
src/cpp/besio/Rec/: BesRFLeafRecEmcCluster.hpp  BesRFLeafRecEmcHit.hpp  BesRFLeafRecEmcShower.hpp  BesRFLeafRecEvTime.hpp  BesRFLeafRecExtTrack.hpp  BesRFLeafRecMdcDedx.hpp  BesRFLeafRecMdcDedxHit.hpp  BesRFLeafRecMdcHit.hpp  BesRFLeafRecMdcKalHelixSeg.hpp  BesRFLeafRecMdcKalTrack.hpp  BesRFLeafRecMdcTrack.hpp  BesRFLeafRecMucTrack.hpp  BesRFLeafRecTofTrack.hpp  BesRFLeafRecZdd.hpp
src/cpp/besio/Trig/: BesRFLeafTrigData.hpp
src/cpp/besio/test/: test_read_speed.cc
src/pybes/: __init__.py  _version.py
src/pybes3/: __init__.py  _cache_numba.py  _check_latest_version.py  _utils.py  tools.py  tracks.py  typing.py
test/: test_besio.py
tests/: test__cache_numba.py  test_besio.py  test_check_latest_version.py  test_docs.py  test_tracks.py
tests/analysis/: test_numba.py  test_vertex.py
tests/besio/: test_besio.py  test_cgem.rtraw  test_full_mc_evt_1.dst  test_full_mc_evt_1.rtraw
tests/data/: test_cgem.dst  test_cgem.dst.parquet  test_cgem.rec  test_cgem.rec.parquet  test_cgem.rtraw  (+12 more)
tools/: format_code.py  gen_setup.py
(+54 files in other folders)
