[build-system]
requires = ["scikit-build-core", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
optional-dependencies = { "test" = [
    "pytest",
], "all" = [
    "pybind11",
    "uproot>=5.0",
    "awkward",
    "scikit-build-core",
    "setuptools_scm",
    "pytest",
] }

name = "pybes"
authors = [{ name = "Mingrun Li", email = "mrun_lee@foxmail" }]
description = "Unofficial Python module for BES3"
requires-python = ">=3.9"
dependencies = [
    "pybind11",
    "uproot>=5.0",
    "awkward",
    "scikit-build-core",
    "setuptools_scm",
]
readme = "README.md"
dynamic = ["version"]
[tool.scikit-build]
wheel.packages = ["src/pybes"]
sdist.exclude = ["tools"]
sdist.include = ["src/pybes/_version.py"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Debug"

[tool.setuptools_scm] # Section required
write_to = "src/pybes/_version.py"

[tool.black]
exclude = "/(build|dist|env|.git|.tox|.eggs|.venv)/"
line-length = 95
target-version = ['py39']
